docs: fix layout bugs related to the TOC (#8356)

--- a/landing/app/globals.css
+++ b/landing/app/globals.css
@@ -638,12 +638,16 @@ html:not([data-anchor-scrolling]) {
 
 @media (min-width: 64rem) {
 	.docs-layout {
-		--fd-layout-width: min(
-			calc(100vw - var(--landing-left-pane-width)),
-			1200px
-		);
+		--fd-layout-width: calc(100vw - var(--landing-left-pane-width));
 		--fd-header-height: -1px;
 		padding-inline-start: var(--landing-left-pane-width);
+	}
+
+	.docs-layout #nd-page {
+		width: auto;
+		max-width: none;
+		margin-inline-start: 0;
+		margin-inline-end: 0;
 	}
 
 	.docs-layout #nd-page > article {
@@ -675,8 +679,7 @@ html:not([data-anchor-scrolling]) {
 
 	.docs-layout #nd-toc {
 		padding-inline-start: 2rem;
-		padding-top: 4rem;
-		padding-bottom: 4rem;
+		padding-top: 2.8rem;
 	}
 }
 
